fixed overflow on honey page

--- a/src/App.css
+++ b/src/App.css
@@ -46,7 +46,7 @@ img {
   content: '';
   position: absolute;
   opacity: 0.5;
-  width: 350px;
+  width: 200px;
   height: 70px;
   background: white;
   top: 0;
